<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="profile"
        android:title="@string/profile"/>

    <PreferenceCategory
        android:title="@string/connection">

        <EditTextPreference
            android:key="server_ip"
            android:title="@string/server_ip"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="server_port"
            android:title="@string/server_port"
            android:inputType="number"
            android:singleLine="true"/>

        <CheckBoxPreference
            android:key="ipv6_proxy"
            android:title="@string/ipv6_proxy"
            android:summary="@string/ipv6_proxy_sum"/>

        <CheckBoxPreference
            android:key="udp_proxy"
            android:title="@string/udp_proxy"
            android:summary="@string/udp_proxy_sum"/>

        <EditTextPreference
            android:key="udp_gw"
            android:title="@string/udp_gw"
            android:singleLine="true"
            android:dependency="udp_proxy"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/performance">

        <EditTextPreference
            android:key="tunnel_host"
            android:title="@string/tunnel_host"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="tunnel_user"
            android:title="@string/tunnel_user"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="obfs_key"
            android:title="@string/obfs_key"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="up_limit"
            android:title="@string/up_limit"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="down_limit"
            android:title="@string/down_limit"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="recv_win_conn"
            android:title="@string/recv_win_conn"
            android:inputType="number"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="recv_win"
            android:title="@string/recv_win"
            android:inputType="number"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="core_count"
            android:title="@string/core_count"
            android:inputType="number"
            android:singleLine="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/authentication">

        <CheckBoxPreference
            android:key="auth_userpw"
            android:title="@string/auth_userpw"
            android:defaultValue="false"/>

        <EditTextPreference
            android:key="auth_username"
            android:title="@string/auth_username"
            android:dependency="auth_userpw"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="auth_password"
            android:title="@string/auth_password"
            android:inputType="textPassword"
            android:dependency="auth_userpw"
            android:singleLine="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced">

        <ListPreference
            android:key="adv_route"
            android:title="@string/adv_route"
            android:entries="@array/adv_routes"
            android:entryValues="@array/adv_routes_values"/>

        <EditTextPreference
            android:key="adv_dns"
            android:title="@string/adv_dns"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="adv_dns_port"
            android:title="@string/adv_dns_port"
            android:inputType="number"
            android:singleLine="true"/>

        <CheckBoxPreference
            android:key="adv_auto_connect"
            android:title="@string/adv_auto_connect"/>

        <CheckBoxPreference
            android:key="adv_per_app"
            android:title="@string/adv_per_app"/>

        <CheckBoxPreference
            android:key="adv_app_bypass"
            android:title="@string/adv_app_bypass"
            android:summary="@string/adv_app_bypass_sum"
            android:dependency="adv_per_app"/>

        <EditTextPreference
            android:key="adv_app_list"
            android:title="@string/adv_app_list"
            android:summary="@string/adv_app_list_sum"
            android:dependency="adv_per_app"/>

    </PreferenceCategory>

</PreferenceScreen>
